--- a/app/src/main/res/layout/list_item_book.xml
+++ b/app/src/main/res/layout/list_item_book.xml
@@ -29,6 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/imgBook"
                 android:layout_marginTop="7dp"
+                android:layout_marginLeft="7dp"
                 android:text="@string/book_name"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -51,13 +52,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/collapseRelLayout"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/authorText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:layout_marginLeft="7dp"
                 android:text="@string/author" />
 
             <TextView
@@ -75,6 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/authorName"
                 android:layout_marginTop="7dp"
+                android:layout_marginLeft="7dp"
                 android:text="@string/short_desc" />
 
             <TextView
@@ -82,6 +85,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/shortDescText"
+                android:layout_marginLeft="7dp"
+                android:layout_marginBottom="5dp"
                 android:text="@string/short_desc" />
 
             <ImageView
@@ -98,7 +103,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/shortDesc"
-                android:layout_marginLeft="7dp"
+                android:layout_marginRight="5dp"
                 android:layout_toStartOf="@id/btnUpArrow"
                 android:layout_toLeftOf="@id/btnUpArrow"
                 android:text="@string/remove"
