--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -19,6 +19,7 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_marginTop="50dp"
+                android:contentDescription="@string/image_url_add"
                 app:layout_constraintEnd_toStartOf="@+id/guideline"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -181,6 +182,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
+
+            <Button
+                android:id="@+id/btn_edit"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="25dp"
+                android:text="@string/edit"
+                android:textAllCaps="false"
+                app:icon="@drawable/ic_edit_white"
+                app:layout_constraintBottom_toBottomOf="@+id/btnAddToWishListBooks"
+                app:layout_constraintEnd_toEndOf="@+id/imgBookInfo"
+                app:layout_constraintHorizontal_bias="0.516"
+                app:layout_constraintStart_toStartOf="@+id/imgBookInfo"
+                app:layout_constraintTop_toBottomOf="@+id/imgBookInfo"
+                app:layout_constraintVertical_bias="1.0"
+                app:strokeColor="@color/teal_200" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
