--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,31 +18,16 @@
         app:layout_constraintStart_toStartOf="@+id/btnAllBooks"
         app:layout_constraintTop_toBottomOf="@+id/btnAllBooks" />
 
-    <TextView
-        android:id="@+id/txtAppName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/short_stack"
-        android:text="@string/app_name"
-        android:textSize="26sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
-
     <Button
         android:id="@+id/btnAllBooks"
         android:layout_width="200dp"
         android:layout_height="60dp"
-        android:layout_marginTop="25dp"
         android:text="@string/all_books"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtAppName" />
+        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
 
     <Button
         android:id="@+id/btnFavoriteBooks"
@@ -94,14 +79,14 @@
 
     <ImageView
         android:id="@+id/imgLogo"
-        android:layout_width="180dp"
-        android:layout_height="135dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginTop="40dp"
         android:contentDescription="@string/logo_description"
-        android:src="@drawable/ic_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_transparent" />
 
     <TextView
         android:id="@+id/txtLicense"
