--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -12,7 +12,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/imgBookInfo"
@@ -188,17 +188,37 @@
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="25dp"
+                android:paddingHorizontal="10dp"
+                android:paddingVertical="10dp"
                 android:text="@string/edit"
                 android:textAllCaps="false"
                 app:icon="@drawable/ic_edit_white"
+
                 app:layout_constraintBottom_toBottomOf="@+id/btnAddToWishListBooks"
                 app:layout_constraintEnd_toEndOf="@+id/imgBookInfo"
-                app:layout_constraintHorizontal_bias="0.516"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="@+id/imgBookInfo"
                 app:layout_constraintTop_toBottomOf="@+id/imgBookInfo"
                 app:layout_constraintVertical_bias="1.0"
                 app:strokeColor="@color/teal_200" />
+
+            <Button
+                android:id="@+id/btn_delete"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:paddingHorizontal="10dp"
+                android:paddingVertical="10dp"
+                android:text="@string/delete"
+                android:textColor="@color/red"
+                android:textAllCaps="false"
+                app:icon="@drawable/ic_delete_white"
+                app:layout_constraintEnd_toStartOf="@+id/guideline4"
+                app:layout_constraintTop_toBottomOf="@+id/imgBookInfo"
+                app:strokeColor="@color/red" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
