--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -14,7 +14,6 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="visible"
             android:id="@+id/book_layout">
 
             <ImageView
@@ -227,24 +226,32 @@
 
     </ScrollView>
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="174dp"
-        android:layout_height="165dp"
-        app:srcCompat="@drawable/ic_error_outline_gray"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"
-        android:visibility="gone"
-        />
+    <RelativeLayout
+        android:id="@+id/empty_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/imageView2"
-        android:text="@string/no_data"
-        android:textSize="24sp"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:visibility="gone"/>
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="174dp"
+            android:layout_height="165dp"
+            app:srcCompat="@drawable/ic_error_outline_gray"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="200dp"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/imageView2"
+            android:text="@string/no_data"
+            android:textSize="24sp"
+            android:layout_marginTop="20dp"
+            android:layout_centerHorizontal="true"
+           />
+    </RelativeLayout>
+
+
 
 </RelativeLayout>
