--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -156,7 +156,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_begin="390dp" />
+                app:layout_constraintGuide_begin="351dp" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline3"
@@ -191,9 +191,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="10dp"
-                android:paddingVertical="10dp"
+                android:paddingVertical="8dp"
                 android:text="@string/edit"
                 android:textAllCaps="false"
+                android:layout_marginTop="8dp"
                 app:icon="@drawable/ic_edit_white"
 
                 app:layout_constraintBottom_toBottomOf="@+id/btnAddToWishListBooks"
@@ -210,17 +211,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginRight="12dp"
                 android:paddingHorizontal="10dp"
-                android:paddingVertical="10dp"
+                android:paddingVertical="8dp"
                 android:text="@string/delete"
-                android:textColor="@color/red"
-                app:iconTint="@color/red"
                 android:textAllCaps="false"
+                android:textColor="@color/red"
                 app:icon="@drawable/ic_delete_white"
+                app:iconTint="@color/red"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
                 app:layout_constraintEnd_toStartOf="@+id/guideline4"
                 app:layout_constraintTop_toBottomOf="@+id/imgBookInfo"
+                app:layout_constraintVertical_bias="1.0"
                 app:strokeColor="@color/red" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
