--- a/app/src/main/res/layout/activity_finished_books.xml
+++ b/app/src/main/res/layout/activity_finished_books.xml
@@ -9,9 +9,33 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/finishedBooksRecView"
         android:layout_width="wrap_content"
+        android:layout_height="600dp"
+        android:layout_margin="15dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/finishedBooksGenreSpinner"/>
+
+    <Spinner
+        android:id="@+id/finishedBooksGenreSpinner"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintHorizontal_bias="0.622"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:text="@string/genre"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/finishedBooksGenreSpinner"
+        app:layout_constraintEnd_toStartOf="@+id/finishedBooksGenreSpinner"
+        app:layout_constraintTop_toTopOf="@+id/finishedBooksGenreSpinner" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
