--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -12,9 +12,9 @@
         >
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/book_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/book_layout">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/imgBookInfo"
@@ -190,11 +190,11 @@
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:paddingHorizontal="10dp"
                 android:paddingVertical="8dp"
                 android:text="@string/edit"
                 android:textAllCaps="false"
-                android:layout_marginTop="8dp"
                 app:icon="@drawable/ic_edit_white"
 
                 app:layout_constraintBottom_toBottomOf="@+id/btnAddToWishListBooks"
@@ -239,10 +239,52 @@
                 android:id="@+id/txtGenreInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="@string/genre"
                 app:layout_constraintBottom_toBottomOf="@+id/textView2"
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
                 app:layout_constraintTop_toTopOf="@+id/textView2" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/btnReplay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginLeft="50dp"
+                android:clickable="true"
+                app:layout_constraintStart_toEndOf="@+id/btnPlay"
+                app:layout_constraintTop_toTopOf="@+id/btnPlay"
+                app:srcCompat="@drawable/ic_replay"
+                android:focusable="true"
+                android:contentDescription="@string/replay" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/btnPlay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="10dp"
+                android:clickable="true"
+                android:focusable="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline5"
+                app:layout_constraintStart_toStartOf="@+id/guideline3"
+                app:layout_constraintTop_toBottomOf="@+id/txtLongDescInfo"
+                app:srcCompat="@drawable/ic_play"
+                android:contentDescription="@string/play" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/btnRecord"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="50dp"
+                android:layout_marginRight="50dp"
+                android:clickable="true"
+                app:layout_constraintBottom_toBottomOf="@+id/btnPlay"
+                app:layout_constraintEnd_toStartOf="@+id/btnPlay"
+                app:layout_constraintTop_toTopOf="@+id/btnPlay"
+                app:srcCompat="@drawable/ic_mic"
+                android:focusable="true"
+                android:contentDescription="@string/record" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -261,7 +303,7 @@
             app:srcCompat="@drawable/ic_error_outline_gray"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="200dp"
-            />
+            android:contentDescription="@string/book_image" />
 
         <TextView
             android:layout_width="wrap_content"
